# vart_ffm_player

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/myndkapplication2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio-player-lib.cpp  my-thread-lib.cpp  mymutex.cpp  mymutex.h  myplayer.cpp  myqueue.cpp  myqueue.h  native-lib.cpp
app/src/main/java/com/example/myndkapplication2/: AudioPlayer.java  MainActivity.java  MyCThread.java  Player.java  VipFrameLayout.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/myndkapplication2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
